Bug #25177 New error codes without error message
Submitted: 19 Dec 2006 13:54 Modified: 7 Apr 2008 17:20
Reporter: Hartmut Holzgraefe Email Updates:
Status: Closed
Category:Server: Errors Severity:S3 (Non-critical)
Version:4.1, 5.0, 5.1 OS:Any
Assigned to: Oleksandr Byelkin Target Version:5.0+,5.1.24
Tags: usability, bfsm_2007_10_18
Triage: D2 (Serious)

[19 Dec 2006 13:54] Hartmut Holzgraefe
Description:
Error codes >152 are not resolved by perror

How to repeat:
perror 153

Suggested fix:
update extra/perror.c to include new error codes > 152
[25 Jan 2007 12:14] Hartmut Holzgraefe
see also bug 10143
[25 Jan 2007 13:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/18774

ChangeSet@1.2407, 2007-01-25 14:42:13+01:00, hartmut@mysql.com +2 -0
  Fix for Bug #25177 "New error codes without error message", 
  all HA_ERR codes should have a message text now
[7 Oct 2007 5:10] Hakan Küçükyılmaz
Just run into 

mysqltest: At line 46: query 'create table t1 (n int not null primary key) ' failed:
1005: Can't create table 'test.t1' (errno: 156)

But perror gives me

hakan@lu0011:~$ perror 156
Illegal error code: 15

I cannot find 156 in the documentation either.

Please fix this issue!
[18 Oct 2007 21:46] Timothy Smith
In addition to fixing perror.c, I'll add comments to my_base.h so it's obvious that
perror.c must be kept in sync.
[18 Oct 2007 22:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/35874

ChangeSet@1.2538, 2007-10-18 16:25:30-06:00, tsmith@ramayana.hindu.god +2 -0
  Bug #25177: New error codes without error message
  
  Add new messages to perror.c, and also add some checks to prevent
  perror.c from compiling if it is not updated when new handler errors
  are added to my_base.h.
[25 Oct 2007 12:17] Chad MILLER
draft of extra/perror.c changes

Attachment: p-perror (application/octet-stream, text), 10.82 KiB.

[25 Oct 2007 12:20] Chad MILLER
Beware that there may be build-order problems with this.  But, since this makes "perror" a
fundamental port of the source code and no longer extraneous, this probably justifies
moving it into include/ or sql/ and making its compilation and execution a precondition
of a new header file, and making the new header file a precondition of building the
source.
[19 Dec 2007 16:30] Sergei Golubchik
ok to push in 5.1
[20 Dec 2007 19:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/40297

ChangeSet@1.2681, 2007-12-20 21:09:37+02:00, bell@desktop.sanja.is.com.ua +5 -0
  Fixed problem with non-synchronous error lists
    in perror and handler descriptors (BUG#25177)
  Fixed problem of masking mysql error by system
    error in perror (BUG#23028)
[28 Mar 2008 16:46] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/44602

ChangeSet@1.2587, 2008-03-28 18:45:03+02:00, gkodinov@magare.gmz +5 -0
  Fixed problem with non-synchronous error lists
    in perror and handler descriptors (BUG#25177)
  Fixed problem of masking mysql error by system
    error in perror (BUG#23028)
[29 Mar 2008 16:11] Bugs System
Pushed into 5.1.24-rc
[31 Mar 2008 19:43] Paul DuBois
Noted in in 5.1.24 changelogs.

perror reported incomplete or inaccurate information.

Resetting report to Patch queued waiting for push into 6.0.x.
[3 Apr 2008 13:01] Bugs System
Pushed into 6.0.5-alpha
[7 Apr 2008 17:20] Paul DuBois
Noted in 6.0.5 changelog.