Fixed problem with non-synchronous error lists   in perror and handler descriptors (BUG#25177) Fixed problem of masking mysql error by system   error in perror (BUG#23028)

extra/perror.c:
  Used common handlers error list.
  Fixed BUG#23028 ignoring mysql error in case of
  OS and mysql error codes overlapping.
include/my_base.h:
  Added errors of maria engine.
  Fixed incorrect comment in #define (can be cause of
  seriouse problems)
include/my_handler.h:
  Added ability to be included into C++ code.
mysys/my_handler.c:
  Error texts moved to the separate files.
mysys/my_handler_errors.h:
  New BitKeeper file ``mysys/my_handler_errors.h''