include/my_handler.h
@@ -19,6 +19,9 @@
 #define _my_handler_h
 
 #include "myisampack.h"
+#ifdef	__cplusplus
+extern "C" {
+#endif
 
 /*
   There is a hard limit for the maximum number of keys as there are only
@@ -118,5 +121,8 @@ extern void my_handler_error_unregister(void);
   this amount of bytes.
 */
 #define portable_sizeof_char_ptr 8
+#ifdef	__cplusplus
+}
+#endif
 
 #endif /* _my_handler_h */
